--- a/DEMO_triadgraph.ipynb
+++ b/DEMO_triadgraph.ipynb
@@ -17,7 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
     "\n",
-    "plt.rcParams[\"font.size\"]=12 # Font size for matplotlib\n",
+    "plt.rcParams[\"font.size\"]=14 # Font size for matplotlib\n",
     "#plt.tight_layout()\n",
     "\n",
     "energy=np.loadtxt(\"./sample_data/Energy_evo.dat\")\n",
@@ -35,7 +35,7 @@
     "ax.set_ylabel(\"Energy $E_k$\")\n",
     "ax.set_ylim(0,None)\n",
     "ax.set_xlim(0,None)\n",
-    "ax.legend(bbox_to_anchor=(1.01,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "ax.legend(bbox_to_anchor=(1.01,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "plt.show()"
    ]
   },
@@ -186,7 +186,7 @@
     "ax.set_xlabel(\"Time t\")\n",
     "ax.set_ylabel(\"Net transfer $T_k$\")\n",
     "ax.set_xlim(0,100)\n",
-    "ax.legend(bbox_to_anchor=(1.01,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "ax.legend(bbox_to_anchor=(1.01,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "plt.show()\n",
     "\n",
     "### Plot J_k^p,q for each k\n",
@@ -207,7 +207,7 @@
     "    ax.set_xlabel(\"Time t\")\n",
     "    ax.set_ylabel(\"$J_{\"+ nodename[k] + \"}^{p,q}$\")\n",
     "    ax.set_xlim(0,100)\n",
-    "    ax.legend(bbox_to_anchor=(1.01,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "    ax.legend(bbox_to_anchor=(1.01,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "plt.show()\n",
     "\n",
     "plt.close(fig)"
@@ -277,7 +277,7 @@
     "triadgraph_directional_kpq(d_kpq[:,:,:,72],1,2,3,title=\"(b) directional representation of (a)\",pwidth=10,nodename=nodename)\n",
     "\n",
     "triadgraph_symmetric_kpq(j_kpq[:,:,:,72],2,3,3,title=\"(c) symmetric triad transfer between two\",pwidth=5,nodename=nodename)\n",
-    "triadgraph_directional_kpq(d_kpq[:,:,:,72],2,3,3,title=\"(b) directional representation of (c)\",pwidth=5,nodename=nodename)"
+    "triadgraph_directional_kpq(d_kpq[:,:,:,72],2,3,3,title=\"(d) directional representation of (c)\",pwidth=5,nodename=nodename)"
    ]
   },
   {
@@ -381,7 +381,7 @@
     "ax.set_xlim(0,100)\n",
     "plt.xticks(color=\"None\")\n",
     "ax.text(2,0.67,'(a)')\n",
-    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "\n",
     "ax = fig.add_subplot(612)\n",
     "for k in range(4):\n",
@@ -392,7 +392,7 @@
     "ax.set_xlim(0,100)\n",
     "plt.xticks(color=\"None\")\n",
     "ax.text(2,0.067,'(b)')\n",
-    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "\n",
     "screening = 0.1 * np.max(abs(j_kpq))\n",
     "k=0\n",
@@ -412,7 +412,7 @@
     "ax.set_xlim(0,100)\n",
     "plt.xticks(color=\"None\")\n",
     "ax.text(2,0.013,'(c)')\n",
-    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "\n",
     "k=1\n",
     "ax = fig.add_subplot(612+(k+1))\n",
@@ -431,7 +431,7 @@
     "ax.set_xlim(0,100)\n",
     "plt.xticks(color=\"None\")\n",
     "ax.text(2,0.038,'(d)')\n",
-    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "\n",
     "k=2\n",
     "ax = fig.add_subplot(612+(k+1))\n",
@@ -450,7 +450,7 @@
     "ax.set_xlim(0,100)\n",
     "plt.xticks(color=\"None\")\n",
     "ax.text(2,0.009,'(e)')\n",
-    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "\n",
     "k=3\n",
     "ax = fig.add_subplot(612+(k+1))\n",
@@ -469,7 +469,7 @@
     "ax.set_xlim(0,100)\n",
     "plt.xticks(color=\"None\")\n",
     "ax.text(2,0.022,'(f)')\n",
-    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0)\n",
+    "ax.legend(bbox_to_anchor=(1.03,0.5), loc=\"center left\", borderaxespad=0, labelspacing=0)\n",
     "\n",
     "\n",
     "plt.xticks(color=\"k\")\n",
@@ -477,6 +477,59 @@
     "\n",
     "plt.close(fig)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# comparison of visivility\n",
+    "triadgraph_symmetric_all(np.average(j_kpq[:,:,:,50:60],axis=3),title=\"t={:4d}-{:4d}\".format(50,60),nodename=nodename,screening=0,energy=np.average(energy[:,i*10:(i+1)*10],axis=1))\n",
+    "triadgraph_directional_all(np.average(d_kpq[:,:,:,50:60],axis=3),title=\"t={:4d}-{:4d}\".format(50,60),nodename=nodename,screening=0,energy=np.average(energy[:,i*10:(i+1)*10],axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "surf = ax.pcolormesh(np.arange(4),np.arange(4),np.sum(np.average(d_kpq[:,:,:,50:60],axis=3),axis=1),\n",
+    "                     cmap=cm.RdBu,shading=\"auto\",vmax=0.7,vmin=-0.7)\n",
+    "ax.set_xlabel(\"Mode k\")\n",
+    "ax.set_ylabel(\"Mode q\")\n",
+    "ax.set_xticks(list(np.arange(4)))\n",
+    "ax.set_xticklabels(nodename)\n",
+    "ax.set_yticks(list(np.arange(4)))\n",
+    "ax.set_yticklabels(nodename)\n",
+    "cbar = fig.colorbar(surf,aspect=5)\n",
+    "cbar.set_label(r\"$\\sum_p D_{k \\leftarrow q}^p$\")\n",
+    "plt.show()\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "surf = ax.pcolormesh(np.arange(4),np.arange(4),np.sum(np.average(wa_kpq[:,:,:,50:60],axis=3),axis=1),\n",
+    "                     cmap=cm.RdBu,shading=\"auto\",vmax=0.7,vmin=-0.7)\n",
+    "ax.set_xlabel(\"Mode k\")\n",
+    "ax.set_ylabel(\"Mode q\")\n",
+    "ax.set_xticks(list(np.arange(4)))\n",
+    "ax.set_xticklabels(nodename)\n",
+    "ax.set_yticks(list(np.arange(4)))\n",
+    "ax.set_yticklabels(nodename)\n",
+    "cbar = fig.colorbar(surf,aspect=5)\n",
+    "cbar.set_label(r\"$\\sum_p A_k^{q,p}$\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -502,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
