--- a/DEMO_triadgraph.ipynb
+++ b/DEMO_triadgraph.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -485,8 +495,8 @@
    "outputs": [],
    "source": [
     "# comparison of visivility\n",
-    "triadgraph_symmetric_all(np.average(j_kpq[:,:,:,50:60],axis=3),title=\"t={:4d}-{:4d}\".format(50,60),nodename=nodename,screening=0,energy=np.average(energy[:,i*10:(i+1)*10],axis=1))\n",
-    "triadgraph_directional_all(np.average(d_kpq[:,:,:,50:60],axis=3),title=\"t={:4d}-{:4d}\".format(50,60),nodename=nodename,screening=0,energy=np.average(energy[:,i*10:(i+1)*10],axis=1))"
+    "triadgraph_symmetric_all(np.average(j_kpq[:,:,:,50:60],axis=3),title=\"t={:4d}-{:4d}\".format(50,60),nodename=nodename,screening=1e-5,energy=np.average(energy[:,i*10:(i+1)*10],axis=1))\n",
+    "triadgraph_directional_all(np.average(d_kpq[:,:,:,50:60],axis=3),title=\"t={:4d}-{:4d}\".format(50,60),nodename=nodename,screening=1e-5,energy=np.average(energy[:,i*10:(i+1)*10],axis=1))"
    ]
   },
   {
@@ -495,6 +505,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "contracted_dkq=np.sum\n",
+    "\n",
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(111)\n",
     "surf = ax.pcolormesh(np.arange(4),np.arange(4),np.sum(np.average(d_kpq[:,:,:,50:60],axis=3),axis=1),\n",
@@ -522,6 +534,64 @@
     "cbar = fig.colorbar(surf,aspect=5)\n",
     "cbar.set_label(r\"$\\sum_p A_k^{q,p}$\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8. Contracted mode-to-mode transfer\n",
+    "$D_{k \\leftarrow q} = \\sum_p D_{k \\leftarrow q}^p$, which could be repraced by the mode-to-mode transfer summed over the index of the mediator $p$, often plotted in the non-symmetrized tranfer analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from triadgraph import triadgraph_mode2mode_all\n",
+    "\n",
+    "contracted_d_kq=np.sum(d_kpq[:,:,:,:],axis=1) # d_kpq[k,p,q,time]\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "surf = ax.pcolormesh(np.arange(4),np.arange(4),np.average(contracted_d_kq[:,:,50:60],axis=2),\n",
+    "                     cmap=cm.RdBu,shading=\"auto\",vmax=0.7,vmin=-0.7)\n",
+    "ax.set_xlabel(\"Mode k\")\n",
+    "ax.set_ylabel(\"Mode q\")\n",
+    "ax.set_xticks(list(np.arange(4)))\n",
+    "ax.set_xticklabels(nodename)\n",
+    "ax.set_yticks(list(np.arange(4)))\n",
+    "ax.set_yticklabels(nodename)\n",
+    "ax.set_aspect('equal', adjustable='box')\n",
+    "cbar = fig.colorbar(surf,aspect=5)\n",
+    "cbar.set_label(r\"$D_{k \\leftarrow q}=\\sum_p D_{k \\leftarrow q}^p$\")\n",
+    "plt.show()\n",
+    "\n",
+    "triadgraph_mode2mode_all(np.average(contracted_d_kq[:,:,50:60],axis=2),title=\"t=50-60\",screening=0.1,nodename=nodename,energy=np.average(energy[:,50:60],axis=1))\n",
+    "\n",
+    "\n",
+    "\n",
+    "contracted_wa_kq=np.sum(wa_kpq[:,:,:,:],axis=1) # wa_kpq[k,p,q,time]\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "surf = ax.pcolormesh(np.arange(4),np.arange(4),np.average(contracted_wa_kq[:,:,50:60],axis=2),\n",
+    "                     cmap=cm.RdBu,shading=\"auto\",vmax=0.7,vmin=-0.7)\n",
+    "ax.set_xlabel(\"Mode k\")\n",
+    "ax.set_ylabel(\"Mode q\")\n",
+    "ax.set_xticks(list(np.arange(4)))\n",
+    "ax.set_xticklabels(nodename)\n",
+    "ax.set_yticks(list(np.arange(4)))\n",
+    "ax.set_yticklabels(nodename)\n",
+    "ax.set_aspect('equal', adjustable='box')\n",
+    "cbar = fig.colorbar(surf,aspect=5)\n",
+    "cbar.set_label(r\"$A_k^q=\\sum_p A_k^{q,p}$\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "triadgraph_mode2mode_all(np.average(contracted_wa_kq[:,:,50:60],axis=2),title=\"t=50-60\",screening=0.1,nodename=nodename,energy=np.average(energy[:,50:60],axis=1))"
    ]
   },
   {
@@ -555,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
