--- a/DEMO_triadgraph.ipynb
+++ b/DEMO_triadgraph.ipynb
@@ -8,9 +8,9 @@
     "This is source code of triad transfer analysis in Ref. [1]. The sample data is used from plasma turbulence simulation in Ref. [2]\n",
     "\n",
     "### References  \n",
-    "[1] S. Maeyama, M. Sasaki, K. Fujii, T. Kobayashi, R. O. Dendy, Y. Kawachi, H. Arakawa, S. Inagaki, New J. Phys., in press (2021).\n",
+    "1. S. Maeyama, M. Sasaki, K. Fujii, T. Kobayashi, R. O. Dendy, Y. Kawachi, H. Arakawa, S. Inagaki, New J. Phys., in press (2021).\n",
     "    [doi:10.1088/1367-2630/abeffc](https://doi.org/10.1088/1367-2630/abeffc) \n",
-    "[2] M. Sasaki, T. Kobayashi, R. O. Dendy, Y. Kawachi, H. Arakawa, S. Inagaki, Plasma Phys. Control. Fusion 63, 025004 (2020)."
+    "2. M. Sasaki, T. Kobayashi, R. O. Dendy, Y. Kawachi, H. Arakawa, S. Inagaki, Plasma Phys. Control. Fusion 63, 025004 (2020)."
    ]
   },
   {
