==None is modified to is None.

--- a/DEMO_triadgraph.ipynb
+++ b/DEMO_triadgraph.ipynb
@@ -8,9 +8,8 @@
     "This is source code of triad transfer analysis in Ref. [1]. The sample data is used from plasma turbulence simulation in Ref. [2]\n",
     "\n",
     "### References  \n",
-    "1. S. Maeyama, M. Sasaki, K. Fujii, T. Kobayashi, R. O. Dendy, Y. Kawachi, H. Arakawa, S. Inagaki, New J. Phys., in press (2021).\n",
-    "    [doi:10.1088/1367-2630/abeffc](https://doi.org/10.1088/1367-2630/abeffc) \n",
-    "2. M. Sasaki, T. Kobayashi, R. O. Dendy, Y. Kawachi, H. Arakawa, S. Inagaki, Plasma Phys. Control. Fusion 63, 025004 (2020)."
+    "[1] S. Maeyama, M. Sasaki, K. Fujii, T. Kobayashi, R. O. Dendy, Y. Kawachi, H. Arakawa, S. Inagaki, New J. Phys., in press (2021). [doi:10.1088/1367-2630/abeffc](https://doi.org/10.1088/1367-2630/abeffc)   \n",
+    "[2] M. Sasaki, T. Kobayashi, R. O. Dendy, Y. Kawachi, H. Arakawa, S. Inagaki, Plasma Phys. Control. Fusion 63, 025004 (2020).  "
    ]
   },
   {
@@ -2092,13 +2091,6 @@
     "\n",
     "triadgraph_mode2mode_all(np.average(contracted_A_kq[50:60,:,:],axis=0),title=\"t=50-60\",screening=0.01,nodename=nodename,energy=np.average(energy[50:60,:],axis=0))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
